Removed license requirement for premium features Fixed book covers sometimes covering the books name in web client

--- a/subsonic-main/src/main/webapp/style/default.css
+++ b/subsonic-main/src/main/webapp/style/default.css
@@ -246,6 +246,11 @@ img {
     border-radius:2px;
 }
 
+.coverart div a img{
+	width:160px;
+	height:160px;
+}
+
 .coverart .caption1 {
     overflow:hidden;
     text-overflow:ellipsis;
